--- a/src/main/resources/Common.properties
+++ b/src/main/resources/Common.properties
@@ -1,4 +1,13 @@
+label.user.username= Username
+label.user.pwd = password
+
+
 #common module error message
 error.common.name.required = Name is required.
 error.common.surname.required = Surname is required.
 error.common.address.required = Address is required.
+error.common.name.length = Username length should be between {0} and {1}.<br/>
+error.common.name.mask = Mask error
+
+#common module error message
+error.global.mesage = Ooooppps... Sometime wrong in this site, please come back later
