--- a/src/main/resources/Common.properties
+++ b/src/main/resources/Common.properties
@@ -10,4 +10,4 @@ error.common.name.length = Username length should be between {0} and {1}.<br/>
 error.common.name.mask = Mask error
 
 #common module error message
-error.global.mesage = Ooooppps... Sometime wrong in this site, please come back later
+error.global.mesage = Ooooppps... Something wrong in this site, please come back later
